# home-assistant-ai

./: README.md  pyproject.toml
home_assistant_ai/: __main__.py
home_assistant_ai/v1/: __init__.py  ai.py  home_assistant.py  speech.py
